# octo-buddy

./: App.tsx  README.md  app.json  package.json
app/: config.ts  navigation.tsx  types.ts
app/components/: CurrentJob.tsx  Screen.tsx  Temperatures.tsx
app/context/: AuthenticatedServer.tsx
app/helpers/: api.ts  hooks.ts  storage.ts
app/models/: AuthenticatedServer.ts
app/screens/: ConnectToServerScreen.tsx  DashboardScreen.tsx  ManualAddServerScreen.tsx  SelectServerScreen.tsx
components/: CurrentJob.tsx  Elements.tsx  ServerListItem.tsx  Temperatures.tsx
context/: AuthenticatedServers.ts
helpers/: api.ts  storage.ts  utils.ts
rust/: Cargo.toml  README.md
rust/src/: web_view.rs
screens/: ServerSelect.tsx
stacks/: Dashboard.tsx
stacks/SelectServer/: ConnectToServerScreen.tsx  ManualAddServerScreen.tsx  SearchServersScreen.tsx  SelectServerScreen.tsx  index.tsx
